--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 
-    <h1>Hello World!!!</h1>
     <p>This is my first GitHub application</p>
-
+    <button type="button">My Button</button>
 </body>
 </html>
