Paragraph tag changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <p>This is my first GitHub application</p>
+    <p>This is my first GitHub app</p>
     <button type="button">My Button</button>
 </body>
 </html>
